feat: Add Cloudflare Web Analytics script to index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+    data-cf-beacon='{"token": "644dc1e1dd574aca9fffa70e0c595f13"}'></script>
+  <!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
